--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "date-fns": "^2.22.1",
     "express": "^4.17.1",
+    "pg": "^8.6.0",
+    "typeorm": "^0.2.34",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
