--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,5 +4,11 @@
   "port": 5440,
   "username": "postgres",
   "password": "docker",
-  "database": "gestaodev"
+  "database": "gestaodev",
+  "migrations": [
+    "./src/database/migrations/*.ts"
+  ],
+  "cli": {
+    "migrationsDir": "./src/database/migrations"
+  }
 }
